# 240-MP-IPTV-Tuner

./: .gitignore  CMakeLists.txt  README.md
.cursor/rules/: 240mp-qml-cpp.mdc  iptv-ersatztv-data.mdc  iptv-guide-ui.mdc  iptv-tuner-module.mdc  iptv-tuner-overview.mdc
modules/iptv_tuner/: manifest.json
modules/iptv_tuner/assets/music/: ATTRIBUTION.md
modules/iptv_tuner/assets/themes/: comcast.json  prevue.json  tv_guide.json
modules/iptv_tuner/views/: Guide.qml  Player.qml  Root.qml  Setup.qml  Tuner.qml  Weather.qml
modules/iptv_tuner/views/components/: ChannelBanner.qml  ChannelNumberOsd.qml  EpgGrid.qml  TransitionOverlay.qml
src/: AppCore.cpp  AppCore.h  main.cpp
src/modules/iptv_tuner/: ChannelMusicPlayer.cpp  ChannelMusicPlayer.h  ChannelRegistry.cpp  ChannelRegistry.h  EpgIndex.cpp  EpgIndex.h  IptvTunerBackend.cpp  IptvTunerBackend.h  M3uParser.cpp  M3uParser.h  WeatherClient.cpp  WeatherClient.h  XmltvParser.cpp  XmltvParser.h
src/player/: MpvController.cpp  MpvController.h
views/: ImagePicker.qml  ModuleSettings.qml  TextEntry.qml
